--- a/Задание№3/footbal_start/footbal_start/footbal/style.css
+++ b/Задание№3/footbal_start/footbal_start/footbal/style.css
@@ -279,7 +279,7 @@ article .contact{
 	width: 50%;
 	max-height: 730px;
 	height: 100vh;
-	padding-top: 700px;
+	padding-top: 730px;
 }
 
 article .work{
@@ -288,17 +288,103 @@ article .work{
 	width: 50%;
 	max-height: 730px;
 	height: 100vh;
-	padding-top: 715px;
+	padding-top: 730px;
 }
 
 article .square{
-	clear: both;
-	color: #5e42b0;
-	text-align: center;
 	position: absolute;
-	padding: 170px 160px 170px 160px;
-
+	left: 50%;
+	margin-left: -84px;
+	margin-top: 30vh;
+	background-color: #5e42b0;
+	width: 170px;
+	height: 160px;
 }
+
+article .square2{
+	position: absolute;
+	right: 45%;
+	background-color: #5e42b0;
+	margin-top: 130vh;
+	width: 170px;
+	height: 160px;
+}
+
+article .square3{
+	position: absolute;
+	left: 45%;
+	background-color: #5e42b0;
+	margin-top: 220vh;
+	width: 170px;
+	height: 160px;
+}
+
+
+article .square a,article .square2 a,article .square3 a{
+	position: absolute;
+	color: #fff;
+	font-size: 24px;
+	margin-top: 61px;
+	margin-left: 71px;
+	font-family:'Proxima Nova Bold' ;
+	padding-bottom: 10px;
+}
+
+article .right_text2{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 80px;
+	color: #e6e6e6;
+	margin-left: 900px;
+	margin-top: 270px;
+}
+
+article .right_text3{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 80px;
+	color: #e6e6e6;
+	margin-left: 95px;
+	margin-top: 1050px;
+}
+
+article .right_text4{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 80px;
+	color: #e6e6e6;
+	margin-left: 900px;
+	margin-top: 1760px;
+}
+
+article .black_text2{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 24px;
+	color: black;
+	margin-top: 450px;
+	margin-left: 900px;
+}
+
+article .black_text3{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 24px;
+	color: black;
+	margin-top: 1200px;
+	margin-left: 150px;
+}
+
+article .black_text4{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 24px;
+	color: black;
+	margin-top: 1900px;
+	margin-left: 900px;
+}
+
+
 
 footer .ex{
 	max-width: 1920px;
@@ -310,7 +396,8 @@ footer h2{
 	font-size: 90px;
 	font-family: 'Proxima Nova Bold';
 	color: #fff;
-	margin-top: -80vh;
+	margin-top: -70vh;
+	margin-left: 500px;
 }
 
 footer h2 span{
@@ -323,7 +410,7 @@ footer h2 span{
 footer .buttons{
 	clear: both;
 	text-align: center;
-	margin-top: 30vh;
+	margin-top: 10vh;
 }
 
 footer .buttons a{
