--- a/style.css
+++ b/style.css
@@ -1,4 +1,537 @@
-img{
-    width: 500px;
-    height: 300px;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+
+/*Our style*/
+
+.wrapper{
+	max-width: 1920px;
+	margin: 0 auto;
+	width: 100%;
+}
+
+.center{
+	max-width: 1550px;
+	margin: 0 auto;
+	width: 90%;
+}
+
+header{
+	height: 100vh;
+	width: 100%;
+	background-image: url('./images/football.png');
+	background-size: cover;
+	max-height: 960px;
+}
+
+header .logo{
+	margin-top: 55px;
+}
+
+
+header .right_text{
+	color: #fff;
+	font-size: 14px;
+	font-family: 'Proxima Nova Light';
+	text-transform: uppercase;
+	float: right;
+	margin-top: 65px;
+}
+
+header h1{
+	font-size: 90px;
+	font-family: 'Proxima Nova Bold';
+	color: #fff;
+	margin-top: 25vh;
+}
+
+header h1 span{
+	float: right;
+}
+
+header .menu{
+	clear: both;
+	float: right;
+}
+
+header .menu li{
+	display: inline-block;
+}
+
+header .menu li a{
+	text-decoration: none;
+	color: #9171ea;
+	font-size: 14px;
+	font-weight: 300;
+	text-transform: uppercase;
+	padding: 0 25px;
+}
+
+header .menu li a:hover{
+	color: #fff;
+}
+
+header .buttons{
+	clear: both;
+	text-align: center;
+	margin-top: 30vh;
+}
+
+header .buttons a{
+	color: #fff;
+	text-decoration: none;
+	display: inline-block;
+	width: 180px;
+	font-family: 'Proxima Nova Light';
+	padding: 5px 65px 20px 43px;
+	background-color: #5e42b0;
+	border-radius: 40px;
+}
+
+header .buttons a i{
+	font-size: 37px;
+	margin-right: 20px;
+	position: relative;
+	top: 15px;
+}
+
+header .buttons a span{
+	margin-left: 52px;
+	font-family: 'Proxima Nova SemiBold';
+}
+
+header .buttons a:first-child{
+	margin-right: 50px;
+}
+
+header .buttons a:hover{
+	color: #5e42b0;
+	background-color: #fff;
+}
+
+header .line{
+	margin-left: 200px;
+	margin-top: -250px;
+}
+
+.container2 .block1 h2{
+	color: #e7e7e7;
+	font-size: 90px;
+	font-family:'Proxima Nova Bold' ;
+	text-transform: uppercase;
+	margin-top: 114px;
+	margin-bottom: 95px;
+}
+
+.container2 img{
+	float: left;
+	margin-left: 9%;
+	margin-top: -85px;
+}
+
+.container2 .text_center{
+	color: #c1c1c1;
+	font-size: 36px;
+	font-family:'Proxima Nova Bold' ;
+	text-transform: uppercase;
+	margin-bottom: 30px;
+}
+
+.container2 .text_center span{
+	font-size: 18px;
+	border-bottom: 5px solid #5e42b0;
+	color: #000;
+	position: relative;
+	top: -10px;
+}
+
+.container2 .text_bottom{
+	font-size: 20px;
+	color: #000;
+	padding-bottom: 60px;
+}
+
+.container2 .block2{
+	background-color: #f6f4fa;
+}
+
+.container2 .block3{
+	background-color: #5e42b0;
+}
+
+.container2 .block2 .text_center,.container2 .block3 .text_center{
+	padding-top: 65px;
+}
+
+.container3 .block1 h2{
+	color: #e7e7e7;
+	font-size: 90px;
+	font-family:'Proxima Nova Bold' ;
+	text-transform: uppercase;
+	margin-top: 90px;
+	margin-bottom: 115px;
+}
+
+.container3 img{
+	float: right;
+	margin-right: 1%;
+	margin-top: -70px;
+}
+
+.container3 .text_center{
+	color: #c1c1c1;
+	font-size: 36px;
+	font-family:'Proxima Nova Bold' ;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+	}
+
+.container3 .text_center span{
+	font-size: 18px;
+	border-bottom: 5px solid #5e42b0;
+	color: #000;
+	position: relative;
+	top: -10px;
+}
+
+.container3 .text_bottom{
+	font-size: 20px;
+	color: #000;
+	padding-bottom: 60px;
+}
+
+.container3 .block2{
+	background-color: #f6f4fa;
+}
+
+.container3 .block3{
+	background-color: #0a0e34 ;
+}
+
+.container3 .block2 .text_center,.container3 .block3 .text_center{
+	padding-top: 100px;
+}
+
+.container3 .block3 .text_bottom{
+	color:#fff;
+}
+
+article .activ{
+	display: block;
+	float: left;
+	width: 50%;
+	max-height: 730px;
+	height: 100vh;
+	padding-top: -100px;
+}
+
+article .contact{
+	display: block;
+	float: right;
+	width: 50%;
+	max-height: 730px;
+	height: 100vh;
+	padding-top: 730px;
+}
+
+article .work{
+	display: block;
+	float: left;
+	width: 50%;
+	max-height: 730px;
+	height: 100vh;
+	padding-top: 730px;
+}
+
+article .square{
+	position: absolute;
+	left: 50%;
+	margin-left: -84px;
+	margin-top: 30vh;
+	background-color: #5e42b0;
+	width: 170px;
+	height: 160px;
+}
+
+article .square2{
+	position: absolute;
+	right: 45%;
+	background-color: #5e42b0;
+	margin-top: 130vh;
+	width: 170px;
+	height: 160px;
+}
+
+article .square3{
+	position: absolute;
+	left: 45%;
+	background-color: #5e42b0;
+	margin-top: 220vh;
+	width: 170px;
+	height: 160px;
+}
+
+
+article .square a,article .square2 a,article .square3 a{
+	position: absolute;
+	color: #fff;
+	font-size: 24px;
+	margin-top: 61px;
+	margin-left: 71px;
+	font-family:'Proxima Nova Bold' ;
+	padding-bottom: 10px;
+	margin-bottom: 5px;
+}
+
+article .right_text2{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 80px;
+	color: #e6e6e6;
+	margin-left: 900px;
+	margin-top: 270px;
+}
+
+article .right_text3{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 80px;
+	color: #e6e6e6;
+	margin-left: 95px;
+	margin-top: 1050px;
+}
+
+article .right_text4{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 80px;
+	color: #e6e6e6;
+	margin-left: 900px;
+	margin-top: 1760px;
+}
+
+article .black_text2{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 24px;
+	color: black;
+	margin-top: 450px;
+	margin-left: 900px;
+}
+
+article .black_text3{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 24px;
+	color: black;
+	margin-top: 1200px;
+	margin-left: 150px;
+}
+
+article .black_text4{
+	position: absolute;
+	font-family:'Proxima Nova Bold' ;
+	font-size: 24px;
+	color: black;
+	margin-top: 1900px;
+	margin-left: 900px;
+}
+
+
+
+footer .ex{
+	max-width: 1920px;
+	margin: 0 auto;
+	width: 100%;
+	}
+
+footer h2{
+	font-size: 90px;
+	font-family: 'Proxima Nova Bold';
+	color: #fff;
+	margin-top: -80vh;
+	margin-left: 500px;
+}
+
+footer h2 span{
+	font-size: 28px;
+	font-family: 'Proxima Nova Bold';
+	color: #9171ea;
+	margin-top: -50vh;
+}
+
+footer .buttons{
+	clear: both;
+	text-align: center;
+	margin-top: 10vh;
+}
+
+footer .buttons a{
+	color: #fff;
+	text-decoration: none;
+	display: inline-block;
+	width: 180px;
+	font-family: 'Proxima Nova Light';
+	padding: 5px 65px 20px 43px;
+	background-color: #5e42b0;
+	border-radius: 40px;
+}
+
+footer .buttons a i{
+	font-size: 37px;
+	margin-right: 20px;
+	position: relative;
+	top: 15px;
+}
+
+footer .buttons a span{
+	margin-left: 52px;
+	font-family: 'Proxima Nova SemiBold';
+}
+
+footer .buttons a:first-child{
+	margin-right: 50px;
+}
+
+footer .buttons a:hover{
+	color: #5e42b0;
+	background-color: #fff;
+}
+
+footer .line{
+	margin-left: 100px;
+	margin-top: 150px;
+}
+
+footer .pin{
+	margin-left: -150px;
+	margin-top: -600px;
+	}
+
+footer .lilist{
+	clear: both;
+}
+
+footer .lilist li{
+	display: inline-block;
+}
+
+footer .lilist li a{
+	text-decoration: none;
+	color: #fff;
+	font-size: 20px;
+	padding: 0 5px;
+	text-transform: uppercase;
+	font-weight: 500px;
+}
+
+@media(min-heigth: 960px){
+		header h1{
+			margin-top: 218px;
+		}
+
+	}	
+
+@media(max-width:1550px){
+	.container2 img{
+		margin-left:0;
+	}
+}
+
+@media(max-width: 1250px;){
+	header h1, .container2 .block1 h2{
+		font-size: 70px;
+	}
+	.container2 img{
+		width: 50%;
+	}
+}
+
+@media(max-width: 1024px;){
+	header h1, .container2 .block1 h2{
+		font-size: 56px;
+	}
+	header .menu li a{
+		padding: 0 10px;
+	}
+}
+
+@media(max-width: 768px;){
+	header h1, .container2 .block1 h2{
+		font-size: 44px;
+	}
+	header .menu li a{
+		padding: 0 5px;
+}
+
+@media(max-width: 425px;){
+	header h1 span{
+		float: none;
+	}
+	header .logo{
+		width: 35%;
+		margin-top: 25px;
+	}
+	header .right_text{
+		margin-top: 30px;
+		font-size: 12px;
+	}
+	header h1{
+		margin-top: 15vh;
+	}
+	header .buttons{
+		margin-top: 15vh;
+	}
+	header{
+		background-position-x: 45%;
+	}
+}
+	
