--- a/Задание№3/footbal_start/footbal_start/footbal/style.css
+++ b/Задание№3/footbal_start/footbal_start/footbal/style.css
@@ -1,3 +1,4 @@
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -56,6 +57,7 @@ table {
 	max-width: 1920px;
 	margin: 0 auto;
 	width: 100%;
+	font-family:'Proxima Nova Regular' ;
 }
 
 .center{
@@ -75,7 +77,6 @@ header{
 header .logo{
 	margin-top: 55px;
 }
-
 
 header .right_text{
 	color: #fff;
@@ -158,7 +159,7 @@ header .buttons a:hover{
 }
 
 header .line{
-	margin-left: 200px;
+	margin-left: 300px;
 	margin-top: -250px;
 }
 
@@ -188,10 +189,11 @@ header .line{
 .container2 .text_center span{
 	font-size: 18px;
 	border-bottom: 5px solid #5e42b0;
-	color: #000;
+	color: rgb(0, 0, 0);
 	position: relative;
 	top: -10px;
 }
+
 
 .container2 .text_bottom{
 	font-size: 20px;
@@ -268,157 +270,193 @@ header .line{
 	color:#9171ea;
 }
 
-article .activ{
-	display: block;
+.container4 img{
 	float: left;
 	width: 50%;
-	max-height: 730px;
-	height: 100vh;
-	padding-top: -100px;
 }
 
-article .contact{
-	display: block;
-	float: right;
-	width: 50%;
-	max-height: 730px;
-	height: 100vh;
-	padding-top: 730px;
+.container4 .first_text{
+	position: relative;
+	left: 100px;
+	top: 190px;
 }
 
-article .work{
-	display: block;
-	float: left;
-	width: 50%;
-	max-height: 730px;
-	height: 100vh;
-	padding-top: 730px;
+.container4 .first_text h2{
+	color: #e6e6e6;
+	font-family: 'Proxima Nova Bold';
+	font-size: 80px;
+	position: relative;
+	left: 35px;
+	top: -35px;
 }
 
-article .square{
+.container4 .first_text .black_text{
+	position: relative;
+	font-family:'Proxima Nova Regular';
+	font-size: 24px;
+	top: 20vh;
+	color: #000;
+}
+
+.container4 .square{
 	position: absolute;
 	left: 50%;
-	margin-left: -84px;
-	margin-top: 30vh;
+	margin-left: -85px;
+	margin-top: 14vh;
 	background-color: #5e42b0;
 	width: 170px;
 	height: 160px;
 }
 
-article .square2{
-	position: absolute;
-	right: 45%;
-	background-color: #5e42b0;
-	margin-top: 130vh;
-	width: 170px;
-	height: 160px;
-}
-
-article .square3{
-	position: absolute;
-	left: 45%;
-	background-color: #5e42b0;
-	margin-top: 220vh;
-	width: 170px;
-	height: 160px;
-}
-
-
-article .square a,article .square2 a,article .square3 a{
-	position: absolute;
-	color: #fff;
-	font-size: 24px;
-	margin-top: 61px;
-	margin-left: 71px;
-	font-family:'Proxima Nova Bold' ;
-	padding-bottom: 10px;
-	margin-bottom: 5px;
-}
-
-article .right_text2{
-	position: absolute;
-	font-family:'Proxima Nova Bold' ;
-	font-size: 80px;
-	color: #e6e6e6;
-	margin-left: 900px;
-	margin-top: 270px;
-}
-
-article .right_text3{
-	position: absolute;
-	font-family:'Proxima Nova Bold' ;
-	font-size: 80px;
-	color: #e6e6e6;
-	margin-left: 95px;
-	margin-top: 1050px;
-}
-
-article .right_text4{
-	position: absolute;
-	font-family:'Proxima Nova Bold' ;
-	font-size: 80px;
-	color: #e6e6e6;
-	margin-left: 900px;
-	margin-top: 1760px;
-}
-
-article .black_text2{
-	position: absolute;
-	font-family:'Proxima Nova Bold' ;
-	font-size: 24px;
-	color: black;
-	margin-top: 450px;
-	margin-left: 900px;
-}
-
-article .black_text3{
-	position: absolute;
-	font-family:'Proxima Nova Bold' ;
-	font-size: 24px;
-	color: black;
-	margin-top: 1200px;
-	margin-left: 150px;
-}
-
-article .black_text4{
-	position: absolute;
-	font-family:'Proxima Nova Bold' ;
-	font-size: 24px;
-	color: black;
-	margin-top: 1900px;
-	margin-left: 900px;
-}
-
-
-
-footer .ex{
-	max-width: 1920px;
-	margin: 0 auto;
-	width: 100%;
-	}
-
-footer h2{
-	font-size: 90px;
+.container4 .square p, .container5 .square2 p, .container6 .square3 p{
 	font-family: 'Proxima Nova Bold';
+	font-size: 30px;
+	margin-top: 65px;
+	margin-left: 70px;
 	color: #fff;
-	margin-top: -95vh;
-	margin-left: 500px;
 }
 
-footer h2 span{
-	font-size: 28px;
-	font-family: 'Proxima Nova Bold';
-	color: #9171ea;
-	padding-top: 80px;
+.container4 .small_line, .container5 .small_line, .container6 .small_line{
+	position: absolute;
+	background-color:#fff;
+	width: 34px;
+	height: 5px;
+	margin-left: 70px;
 }
 
-footer .buttons{
+.container5 img{
+	float: right;
+	width: 50%;
+}
+
+.container5 .paragraph, .container6 .paragraph{
 	clear: both;
-	text-align: center;
+}
+
+.container5 .second_text{
+	position: relative;
+	left: 100px;
+	top: 190px;
+}
+
+.container5 .second_text h2{
+	font-family: 'Proxima Nova Bold';
+	font-size: 80px;
+	position: relative;
+	color: #e6e6e6;
+	left: 50px;
+	top: -35px;
+}
+
+.container5 .second_text .black_text2{
+	position: relative;
+	font-family:'Proxima Nova Regular';
+	font-size: 24px;
+	top: 20vh;
+	color: #000;
+}
+
+.container5 .square2{
+	position: absolute;
+	left: 50%;
+	margin-left: -85px;
+	margin-top: 14vh;
+	background-color: #5e42b0;
+	width: 170px;
+	height: 160px;
+}
+
+.container6 img{
+	float: left;
+	width: 50%;
+}
+
+.container6 .third_text{
+	position: relative;
+	left: 100px;
+	top: 190px;
+}
+
+.container6 .third_text h2{
+	color: #e6e6e6;
+	font-family: 'Proxima Nova Bold';
+	font-size: 80px;
+	position: relative;
+	left: 35px;
+	top: -35px;
+}
+
+.container6 .third_text .black_text3{
+	position: relative;
+	font-family:'Proxima Nova Regular';
+	font-size: 24px;
+	top: 20vh;
+	color: #000;
+}
+
+.container6 .square3{
+	position: absolute;
+	left: 50%;
+	margin-left: -85px;
+	margin-top: 14vh;
+	background-color: #5e42b0;
+	width: 170px;
+	height: 160px;
+}
+
+.container6 .small_line{
+	position: absolute;
+	background-color:#fff;
+	width: 32px;
+	height: 5px;
+	margin-left: 70px;
+}
+
+.container7{
+	height: 100vh;
+	width: 100%;
+	background-image: url('./images/ex.png');
+	background-size: cover;
+	max-height: 960px;
+	overflow: hidden;
+}
+
+.container7 img{
+	position: relative;
+	margin-top: 80px;
+	margin-left: 50px;
+}
+
+.container7 .logo{
+	position: relative;
+	clear: both;
 	margin-top: 10vh;
 }
 
-footer .buttons a{
+.container7 h2{
+	font-family:'Proxima Nova Bold';
+	font-size: 90px;
+	text-align: center;
+	color: #fff;
+	z-index: 4;
+}
+
+.container7 h2 span{
+	font-family:'Proxima Nova Bold';
+	font-size: 36px;
+	position: relative;
+	color: #fff;
+	margin-left: 140px;
+	z-index: 3;
+}
+
+.container7 .buttons{
+	clear: both;
+	text-align: center;
+	margin-top: 30vh;
+}
+
+.container7 .buttons a{
 	color: #fff;
 	text-decoration: none;
 	display: inline-block;
@@ -429,35 +467,38 @@ footer .buttons a{
 	border-radius: 40px;
 }
 
-footer .buttons a i{
+.container7 .buttons a i{
 	font-size: 37px;
 	margin-right: 20px;
 	position: relative;
 	top: 15px;
 }
 
-footer .buttons a span{
-	margin-left: 52px;
+.container7 .buttons a span{
 	font-family: 'Proxima Nova SemiBold';
+	margin-left: 52px;
 }
 
-footer .buttons a:first-child{
+.container7 .buttons a:first-child{
 	margin-right: 50px;
 }
 
-footer .buttons a:hover{
+.container7 .buttons a:hover{
 	color: #5e42b0;
 	background-color: #fff;
 }
 
-footer .line{
-	margin-left: 100px;
-	margin-top: 150px;
+.container7 .two_line img{
+	position: relative;
+	margin-left: 600px;
+	margin-top: -800px;
 }
 
-footer .pin{
-	margin-left: -150px;
-	margin-top: -600px;
+footer .dark{
+	position: relative;
+	background: rgba(13, 13, 44, 0.7);
+	width: 100%;
+	height: 120px;
 }
 
 footer .list{
@@ -477,16 +518,8 @@ footer .lilist li a{
 }
 
 footer .lilist a:hover{
+	color: #fff;
 	color: #5e42b0;
-	background-color: #fff;
-}
-
-footer .dark{
-	position: relative;
-	background: rgba(13, 13, 44, 0.7);
-	width: 100%;
-	height: 120px;
-	margin-top: 165px;
 }
 
 footer .logo2{
@@ -500,18 +533,8 @@ footer h3{
 	font-family: 'Proxima Nova Bold';
 	font-size: 17px;
 	color: #fff;
-	margin-left: 1250px;
+	margin-left: 1600px;
 	margin-top: -30px;
-}
-
-footer .line_short{
-	margin-left: 500px;
-	margin-top: -400px;
-}
-
-footer .line_long{
-	margin-left: 750px;
-	margin-top: -300px;
 }
 
 @media(min-height: 960px){
@@ -527,6 +550,9 @@ footer .line_long{
 	.container2 img{
 		margin-left: 0;
 	}
+	header .line{
+		max-width: 0vh;
+	}
 }
 
 @media(max-width: 1250px){
@@ -536,29 +562,19 @@ footer .line_long{
 	.container2 img{
 		width: 50%;
 	}
-	.container3 img{
-		width: 50%;
-	}
 }
 
 @media(max-width: 1024px){
-	header h1, .container2 .block1 h2,.container3 .block1 h2{
+	header h1, .container2 .block1 h2{
 		font-size: 56px;
 	}
 	header .menu li a{
 		padding: 0 10px;
 	}
-	article h2{
-		font-size: 50px;
-	}
-	footer .up{
-		width: 100px;
-		height: 100px;
-	}
 }
 
 @media(max-width: 768px){
-	header h1, .container2 .block1 h2, .container3 .block1 h2{
+	header h1, .container2 .block1 h2{
 		font-size: 44px;
 	}
 	header .menu li a{
@@ -572,11 +588,10 @@ footer .line_long{
 		margin-right: auto;
 		margin-bottom: 20px;
 	}
-
 }
 
 @media(max-width: 576px){
-	header h1, .container2 .block1 h2, .container3 .block1 h2{
+	header h1, .container2 .block1 h2{
 		font-size: 33px;
 	}
 	.container2 img{
@@ -585,37 +600,6 @@ footer .line_long{
 		float: none;
 		display: block;
 		margin-top: 0;
-	}
-	.container3 img{
-		margin-left: auto;
-		margin-right: auto;
-		float: none;
-		display: block;
-		margin-top: 0;
-	}
-	article .left{
-		margin-left: auto;
-		float: none;
-		display: block;
-		margin-top: 0;
-		width: 100%;
-		max-height: 30px;
-	}
-	article .right{
-		height: 15px;
-		width: 100%;
-	}
-	article .square, article .square2, article .square3{
-		width: 20%;
-		height: 12%;
-	}
-	article .square a, article .square2 a, article .square3 a{
-		display: block;
-		margin: auto;
-	}
-		article .square{
-		margin-top: 1px;
-		margin-left: 1px;
 	}
 }
 
